--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <div style="float: right;">
     <% if user_signed_in? %>
+      <h2><%= current_user.name %></h2>
       <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
     <% else %>
       <%= link_to "Sign in", new_user_session_path%>
     <% end %>
-    
+    </div>
     
      
     <p class="notice"><%= notice %></p>
